# WORDSMITH-Making-Learning-Hindi-Easier

./: README.md  gitignore  package-lock.json  package.json  server.js  tsconfig.json
en_hi_model/: Cargo.toml
en_hi_model/src/: main.rs
server/: app.js  model.js  package-lock.json  package.json  verify.js
server/Routes/: getDifficultyLevel.js  getTopcs.js  getWords.js  getWordsFromTopic.js  grammarCorrection.js  login.js  regsiter.js  storeTopic.js  storeWords.js  translation.js  verify.js
src/components/: About.jsx  Entry.jsx  Footer.jsx  Interest.jsx  Interest.module.css  LandingScreen.jsx  Navbar.jsx  Sidebar.jsx
src/components/AuthEnglish/: Auth.jsx  Login.jsx  SignUp.jsx
src/components/AuthHindi/: Auth.jsx  Interest.jsx  Login.jsx  SigIn.module.css  SignUp.jsx
src/components/HindiComponents/: FooterHindi.jsx  LandingHindi.jsx  NavbarHindi.jsx  SidebarHindi.jsx
src/pages/: index.jsx
src/pages/about/: index.jsx
src/pages/dashboard/: dictionary.jsx  grammar.jsx  index.jsx  translation.jsx  vocabulary.jsx
src/pages/landing/: index.jsx
src/styles/: globals.css
